# SuperHexagonAI

./: .gitignore  404.html  README.md  environment.py  eval.py  index.html  mkdocs.yml  objects.inv  requirements.txt  superhexagon.py  trainer.py  trainerB.py  trainerC.py  trainerImitation.py  trainerImitationBackup.py  trainerImitationImage.py  trainerPPO.py  trainerPPOImage.py  trainer_DQN_GYM_SB3.py  trainer_PPO_GYM.py  trainer_PPO_GYM_SB3.py  trainer_PPO__GYM_SB3.py
RLHookLib/: CMakeLists.txt
architecture/: index.html
docs/: architecture.md  environment.md  getting-started.md  implementation.md  index.md  interface.md  legal.md  llm.md  no_sb3.md  performance.md  sb3.md
docs/performance/: dqn.csv  ppo_sb3.csv
environment/: index.html
getting-started/: index.html
images/: achitecture.txt
implementation/: index.html
installation/: index.html
interface/: index.html
legal/: index.html
llm/: index.html
no_sb3/: index.html
performance/: dqn.csv  index.html  ppo_no_sb3.csv  ppo_sb3.csv
sb3/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv
site/architecture/: index.html
site/environment/: index.html
site/getting-started/: index.html
site/images/: achitecture.txt
site/interface/: index.html
site/legal/: index.html
site/llm/: index.html
site/no_sb3/: index.html
site/performance/: index.html  ppo_no_sb3.csv
site/sb3/: index.html
site/search/: search_index.json
